[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PNG/Lasers/laserRed01.png" type="Texture" id=1]
[ext_resource path="res://projectiles/EnemyLaser.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 32.0

[node name="EnemyLaser" type="Area2D" groups=["enemy_projectile"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3.71292e-08, 0.424709 )
rotation = 3.14159
scale = Vector2( 1, 0.742028 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy_projectile"]]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1, 2.1 )

[connection signal="area_entered" from="." to="." method="_on_EnemyLaser_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
